src/test/ui/impl-trait/issues/issue-78722.stderr
error[E0658]: `async` blocks are not allowed in constants
  --> $DIR/issue-78722.rs:12:20
   |
LL |         let f: F = async { 1 };
   |                    ^^^^^^^^^^^
   |
   = note: see issue #85368 <https://github.com/rust-lang/rust/issues/85368> for more information
   = help: add `#![feature(const_async_blocks)]` to the crate attributes to enable

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-78722.rs:12:13
   |
LL |         let f: F = async { 1 };
   |             ^ constants cannot evaluate destructors
...
LL |     }],
   |     - value is dropped here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
